# nxtcreate-backend

./: .dockerignore  .dockignore  .env.example  .gitignore  Dockerfile  LICENSE  cloudbuild.yaml  docker-compose.yml  pyproject.toml  request.py  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/middleware/: auth_middleware.py
app/models/: category_model.py  user_model.py  video_model.py
app/routes/: admin.py  auth.py  student.py  video.py
app/services/: firebase.py  student_service.py  upload_service.py  user_service.py  video_service.py
app/utils/: excel_parser.py  seeder.py  validators.py
