[project]
name = "nxtcreate-backend"
version = "1.0.0"
description = "NxtWave SMS Backend"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "firebase-admin==6.2.0",
    "python-multipart==0.0.6",
    "openpyxl==3.1.5",
    "python-dotenv==1.0.0",
    "aiofiles==23.2.1",
    "email-validator==2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
